--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,14 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">AutomationSuite</th></tr>
-<tr><td><a href="#t0">GBITTests</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">29,456</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">8,517</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">AutomationSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">GBITTests &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">GBIT.Forgotpass</td><td><a href="#m0">testSignUp</a></td><td rowspan="1">1743528257463</td><td rowspan="1">6818</td></tr><tr class="passedodd"><td rowspan="1">GBIT.SaveProp</td><td><a href="#m1">testSignUp</a></td><td rowspan="1">1743528265213</td><td rowspan="1">6697</td></tr><tr class="passedeven"><td rowspan="1">GBIT.SingUp</td><td><a href="#m2">testSignUp</a></td><td rowspan="1">1743528249104</td><td rowspan="1">7271</td></tr><tr class="passedodd"><td rowspan="1">Testing.TestingNG</td><td><a href="#m3">testDropdown</a></td><td rowspan="1">1743528272717</td><td rowspan="1">3677</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">GBIT.Forgotpass</td><td><a href="#m0">testSignUp</a></td><td rowspan="1">1743549276978</td><td rowspan="1">7037</td></tr></tbody>
 </table>
-<h2>GBITTests</h2><h3 id="m0">GBIT.Forgotpass#testSignUp</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">GBIT.SaveProp#testSignUp</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">GBIT.SingUp#testSignUp</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">Testing.TestingNG#testDropdown</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">GBIT.Forgotpass#testSignUp</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
